# stoopid-short

./: .gitignore  Cargo.toml  LICENSE  README.md  devenv.nix  flake.nix
.github/workflows/: build.yaml
charts/stoopid-short/: Chart.yaml  values.yaml
charts/stoopid-short/templates/: nginx-deployment.yaml
nix/: oci-image.nix  package.nix
nix/tests/e2e/: default.nix  test.sh
nix/tests/k8s/: default.nix  images.nix
src/: api.rs  config.rs  lib.rs  main.rs  orm.rs  url_repo.rs  url_service.rs
tests/: e2e.sh
