[package]
name = "stoopid-short"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.7"
rearch = "0.10.2"
rearch-effects = "0.6.0"
sea-orm = { version = "2.0.0-rc.21", features = ["runtime-tokio-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["parsing"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tracing = "0.1.42"
