[package]
name = "stoopid-short"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "A microservice that shortens URLs"
repository = "https://github.com/GregoryConrad/stoopid-short"
categories = ["web-programming", "asynchronous"]
keywords = ["short", "url", "server"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.8"
base62 = "2.2.3"
rearch = "0.10.2"
rearch-effects = "0.6.0"
sea-orm = { version = "2.0.0-rc.22", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["parsing"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tracing = "0.1.42"
tracing-subscriber = "0.3.22"
url = "2.5.7"
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
mockall = "0.14.0"
sea-orm = { version = "2.0.0-rc.22", features = ["mock"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
cargo = "warn"
complexity = "warn"
correctness = "warn"
nursery = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
clone_on_ref_ptr = "warn"
unwrap_used = "warn"
multiple_crate_versions = { level = "allow", priority = 1 }
